--- a/projetoValueWare/saude/saude.html
+++ b/projetoValueWare/saude/saude.html
@@ -25,7 +25,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../principal/index.html">Home <span class="sr-only"></span></a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Saúde
@@ -47,7 +47,7 @@
     </nav>
     <main >
         <div class="container mt-5">
-            <h1 class="display-4">Preparação para Acreditação</h1>
+            <h1 class="display-4 mb-3">Preparação para Acreditação</h1>
             <p class="lead">
                 É um processo a que um serviço de saúde se submete voluntariamente (ou seja, se nenhuma
                 obrigação legal), que mensura e atesta a qualidade de serviços prestados.
@@ -56,9 +56,9 @@
                 Para ser acreditado, o serviço deve comprovadamente atender aos padrões e requisitos
                 definidos pela Organização Nacional de Acreditação – ONA, Qmentum International ou a Joint
                 Comission International – JCI.
-                A acreditação hospitalar funciona como uma certificação de qualidade, como a ISO, por
+                <mark>A acreditação hospitalar funciona como uma certificação de qualidade, como a ISO, por
                 exemplo, mas nesse caso é exclusiva para instituições de saúde. A estratégia pode ser
-                comparada a um programa de educação continuada.
+                comparada a um programa de educação continuada.</mark>
                 Isso porque também estimula o entendimento estratégico, a conformidade produtiva
                 multiprofissional, a racionalização de insumos e a otimização dos resultados nesses
                 ambientes.
@@ -66,9 +66,9 @@
                 assistenciais, auxiliando sua empresa a alcançar essa certificação e os benefícios que ela
                 acarreta para o seu negócio.
             </p>
-            <div class="jumbotron mt-3">
-                <h3 class="display-6" id="acreditação">O que é Acreditação?</h3>
-                <p>
+            <div>
+                <h3 class="display-4 mb-3" id="acreditação">O que é Acreditação?</h3>
+                <p class="lead">
                     É um processo a que um serviço de saúde se submete voluntariamente (ou seja, se nenhuma
                     obrigação legal), que mensura e atesta a qualidade de serviços prestados.
                     É também um importante instrumento de gestão e melhoria contínua de qualidade e
@@ -90,7 +90,7 @@
         </div>
         <div class="container mt-5">
 
-            <h1 class="display-4">Por que investir em Acreditação?</h1>
+            <h1 class="display-4 mb-3">Por que investir em Acreditação?</h1>
             <p class="lead">
                 O processo de acreditação vai muito além da obtenção de uma certificação; é principalmente uma maneira
                 de melhorar a qualidade dos serviços prestados, conquistar a confiança dos pacientes e integrar
@@ -99,7 +99,7 @@
                 class="img-fluid">
             <div class="container mt-5">
                 <div class="jumbotron mt-3">
-                    <h3 class="display-4">Principais benefícios da Acreditação:</h3>
+                    <h3 class="display-4 mb-3">Principais benefícios da Acreditação:</h3>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Melhoria contínua:</strong> Este é um processo que visa a
                             melhoria constante da Segurança do paciente e dos resultados assistenciais.</li>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="container mt-5">
-                <h2 class="display-4">Como funciona a Acreditação Hospitalar?</h2>
+                <h2 class="display-4 mb-3">Como funciona a Acreditação Hospitalar?</h2>
                 <p>
                     A acreditação hospitalar depende do cumprimento de certos pré-requisitos, que podem variar
                     de acordo com cada entidade acreditadora.
@@ -151,7 +151,7 @@
                     incluem:
                 </p>
 
-                <h3 class="display-4">Organização interna</h3>
+                <h3 class="display-4 mb-3">Organização interna</h3>
                 <p>
                     A avaliação demanda o engajamento de todos os profissionais envolvidos na unidade de saúde,
                     e é preciso que os mesmos tenham domínio sobre os critérios de acreditação e os priorizem
@@ -162,14 +162,14 @@
                 </p>
 
                 <div>
-                    <h3 class="display-4">Coordenador Responsável</h3>
+                    <h3 class="display-4 mb-3">Coordenador Responsável</h3>
                     <p>
                         Embora a acreditação hospitalar exija esforços coletivos, é essencial designar um coordenador
                         responsável por gerenciar todo o processo. Este profissional pode ser alguém da equipe interna,
                         desde que capacitado para a função, ou um consultor externo contratado. Suas principais
                         responsabilidades incluem:
                     </p>
-                    <ul class="list-group">
+                    <ul class="list-group mb-3">
                         <li class="list-group-item">Monitorar todos os procedimentos;</li>
                         <li class="list-group-item">Reconhecer as mudanças necessárias para a adaptação;</li>
                         <li class="list-group-item">Garantir a transparência das adequações, mantendo contato constante
@@ -193,7 +193,7 @@
                 <div>
 
 
-                    <h3 class="display-4">Capacitação Profissional</h3>
+                    <h3 class="display-4 mb-3">Capacitação Profissional</h3>
                     <p>
                         A acreditação hospitalar requer que todos os serviços estejam alinhados aos requisitos e
                         parâmetros
@@ -203,7 +203,7 @@
                         liderança, procedimentos, gerenciamento de riscos, estratégias, e outros aspectos semelhantes.
                     </p>
 
-                    <h3 class="display-4">Alinhamento de Terceiros</h3>
+                    <h3 class="display-4 mb-3">Alinhamento de Terceiros</h3>
                     <p>
                         Não apenas os profissionais internos, mas também fornecedores e parceiros, desempenham um papel
                         crucial na qualidade das práticas de uma unidade de saúde. Para atender aos requisitos da
@@ -212,7 +212,7 @@
                         insumos, equipamentos, materiais, e serviços como limpeza, lavanderia e alimentação.
                     </p>
 
-                    <h3 class="display-4">Escolha do Órgão Acreditador</h3>
+                    <h3 class="display-4 mb-3">Escolha do Órgão Acreditador</h3>
                     <p>
                         Todas as práticas mencionadas até aqui devem seguir os requisitos específicos de uma entidade
                         acreditadora. Essa entidade pode ser nacional ou internacional, e é possível obter
@@ -259,7 +259,7 @@
                 <p class="lead">
                 <h1 class="display-4" id="VMO">Management Officer (VMO)</h1>
                 <div class="container mt-4">
-                    <h3>Implantação de Value Management Officer</h3>
+                    <h3 class="mt-5 mb-3">Implantação de Value Management Officer</h3>
 
                     <p>
                         Você sabia que a implantação de um Value Management Officer (VMO) pode trazer grandes benefícios
@@ -301,7 +301,7 @@
                     </div>
 
 
-                    <h2 class="display-4">Como implantar um VMO?</h2>
+                    <h2 class="display-4 mb-3">Como implantar um VMO?</h2>
                     <p>
                         A implantação de um VMO pode ser dividida em algumas etapas. Em primeiro lugar, é necessário
                         realizar um
@@ -413,7 +413,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form action="/enviar" method="post">
+                        <form action="/enviar" method="post" autocomplete="off">
                             <div class="form-group">
                                 <label for="nome">Nome*</label>
                                 <input type="text" class="form-control" id="nome" name="nome" required>
@@ -448,14 +448,14 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-auto">
-                        <a href="https://www.facebook.com/TelecallBr" class="text-white me-3" style="font-size: 24px;">
+                        <a href="https://www.facebook.com/TelecallBr" target="_blank"class="text-white me-3" style="font-size: 24px;">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
-                        <a href="https://www.linkedin.com/company/telecall/?originalSubdomain=br"
+                        <a href="https://www.linkedin.com/company/telecall/?originalSubdomain=br" target="_blank"
                             class="text-white me-3" style="font-size: 24px;">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
-                        <a href="https://www.instagram.com/telecallbr/" class="text-white me-3"
+                        <a href="https://www.instagram.com/telecallbr/" target="_blank" class="text-white me-3"
                             style="font-size: 24px;">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
@@ -469,14 +469,14 @@
                 <div class="row mt-4">
                     <div class="col-md-6 offset-md-3">
                         <h2 class="text-center mb-4">Entre em Contato</h2>
-                        <form action="mailto:contato@valueware.com.br" method="post">
+                        <form action="mailto:contato@valueware.com.br" method="post" autocomplete="off">
                             <div class="mb-3">
                                 <label for="nome" class="form-label">Nome *</label>
                                 <input type="text" class="form-control" id="nome" name="nome" required>
                             </div>
                             <div class="mb-3">
                                 <label for="telefone" class="form-label">Telefone</label>
-                                <input type="text" class="form-control" id="telefone" name="telefone">
+                                <input type="text" class="form-control" id="telefone" name="telefone"pattern="[0-9]{10}">
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">E-mail *</label>
