--- a/Praticando/index.html
+++ b/Praticando/index.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div>lucas</div>
-    <div>maria</div>
-    <div>diego</div>
+    <form action="" method="post">
+        <label for="pokemon">Escolha seu pokemon:</label>
+        <input type="text" id="pokemon">
+        <input type="button" value="enviar" onclick="carregarPokemon()">
+    </form>
     <script src="./index.js"></script>
 </body>
 </html>
