--- a/redeSocial/principal/index.html
+++ b/redeSocial/principal/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <a href="#">
-                    <img src="../imagens/redeSocial.jpeg" alt="logo" id="logo" height="30">
+                    <img src="../imagens/redeSocial.png" alt="logo" id="logo" height="30">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
