alterações nos projetos

--- a/redeSocial/album/album.html
+++ b/redeSocial/album/album.html
@@ -82,6 +82,7 @@
                     </div>
                     <div id="botoes">
 
+                        <p id="comentarios"></p>
                         <button id="anterior">anterior</button>
                         <button id="proximo">proximo</button>
                     </div>
