--- a/redeSocial/principal/index.html
+++ b/redeSocial/principal/index.html
@@ -65,8 +65,11 @@
         <main>
             <aside class="ladoEsquerdo">
                 <a href="#">Status</a>
-                <a href="#">Meus Amigos</a>
                 <a href="#">Mensagens</a>
+                <a href="#">Meus Amigos</a>
+                
+                <div class="amigos">
+                </div>
             </aside>
 
             <aside class="ladoDireito">
@@ -95,6 +98,7 @@
                 </form>
 
             </article>
+  
         </main>
     </div>
 
