--- a/megaDaVirada/numerosSorteados.html
+++ b/megaDaVirada/numerosSorteados.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
     <main>
         <div class="container">
             <form>
@@ -98,12 +97,11 @@
             </form>
             <table id="tabelaResultados">
                 <button type="button" id = "voltar" class="botao">Voltar</button>
-                <caption>Resultado</caption>
+                <caption id="resultado">Resultado</caption>
                 <tr>
                     <th>Nome</th>
                     <th>Acertos</th>
-                    <th>Bilhete</th>
-                    <th>Numeros do Bilhete</th>
+                    <th>Numeros do Seu Bilhete</th>
                 </tr>
             </table>
         </div>
