--- a/megaDaVirada/index.html
+++ b/megaDaVirada/index.html
@@ -13,7 +13,8 @@
         <div class="container">
             <form>
                 <table>
-                    <caption><img src="trevo.jpg">Mega Da Virada</caption>
+                    <caption>
+                        <img src="trevo.jpg">Mega Da Virada</caption>
                     
                         <tr>
                             <td>1</td>
