--- a/redeSocial/login/login.html
+++ b/redeSocial/login/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="../assets/css/style_login.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     </section>
     <footer>
     </footer>
-    <script src="javascript.js"></script>
+    <script src="../assets/javascript/script_login.js"></script>
 </body>
 
 </html>
