--- a/redeSocial/cadastro/cadastro.html
+++ b/redeSocial/cadastro/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="../assets/css/style_cadastro.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     </section>
     <footer>
     </footer>
-    <script src="./javascript/javascript.js"></script>
+    <script src="../assets/javascript/script_cadastro.js"></script>
 </body>
 
 </html>
