--- a/redeSocial/index.html
+++ b/redeSocial/index.html
@@ -1,59 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pagina inicial</title>
-  <link rel="stylesheet" href="./assets/css/style_index.css">
-  <link rel="stylesheet" href="assets/css/style_index_layout.css">
+  <title>LucasBook</title>
 </head>
-
 <body>
-  <header>
-    <nav class="navbar">
-      <div><img src="./assets/img/logo.png"></div>
-      <ul class="menu">
-        <li class="nav-item">Vendas</li>
-        <li class="nav-item">Messenger</li>
-        <li class="nav-item">Cadastre-se</li>
-        <li class="nav-item">Login</li>
-      </ul>
-    </nav>
+  <header class="cabecalho">
+
   </header>
-  <main>
-    <p>
-      <h1>Aqui na LucasBook você tem tudo que precisa !!</h1>
-    </p>
-    <div class="imagens">
+  <main class="conteudo">
 
-        <div class="imagem">
-        <img src="./assets/img/amigos-se-divertindo-no-reencontro.jpg">
-        <legend>Faça amigos !</legend>
-        </div>
-        <div class="imagem">
-          <img src="./assets/img/seguir.png">
-          <legend>Curta conteudos</legend>
-        </div>
-        <div class="imagem">
-          <img src="./assets/img/produtos-usados.jpg">
-          <legend>Compre e venda produtos</legend>
-        </div>
-        <div class="imagem">
-          <img src="./assets/img/produtos-usados.jpg">
-          <legend>Mande mensagem para seus amigos</legend>
-        </div>
-
-    </div>
   </main>
+  <footer class="rodape">
 
-  <aside id="direito"><img src="./assets/img/convite.jpeg"></aside>
-  <footer>
-    <div class="footer">
-          <p>© 2024 LucasBook. Todos os direitos reservados.</p>
-    </div>
   </footer>
-  <script src="./assets/javascript/script_index.js"></script>
 </body>
-
 </html>
