--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="../build/assets/css/assets/css/style.css">
 
 </head>
 <div class="imagem_principal">
