--- a/redeSocial/src/paginas/login.html
+++ b/redeSocial/src/paginas/login.html
@@ -6,26 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../assets/css/style_login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <section class="area-login">
-        <div class="login">
-            <div>
-                <img src="./Captura de tela 2024-01-12 200034.png">
-            </div>
+    <main>
+        <section class="area-login">
+            <div class="login">
+                <div>
+                    <img src="./Captura de tela 2024-01-12 200034.png">
+                </div>
 
-            <form action="../conexao/login.php" method="post">
-                <input type="text" name="nome" placeholder="Nome de usuário" maxlength="12" minlength="12"  autofocus required>
-                <input type="password" name="senha" placeholder="Sua senha" required maxlength="10" minlength="10">
-                <input type="submit" value="entrar">
-            </form>
-            <p>Ainda não tem uma conta? <a href="../cadastro/cadastro.html">Criar conta</a></p>
-        </div>
-    </section>
+                <form action="../conexao/login.php" method="post">
+                    <input type="text" name="nome" placeholder="Nome de usuário" maxlength="12" minlength="12" autofocus
+                        required>
+                    <input type="password" name="senha" placeholder="Sua senha" required maxlength="10" minlength="10">
+                    <input type="submit" value="entrar">
+                </form>
+                <p>Ainda não tem uma conta? <a href="../cadastro/cadastro.html">Criar conta</a></p>
+            </div>
+        </section>
+    </main>
     <footer>
     </footer>
     <script src="../assets/javascript/script_login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
