--- a/calculadoraIMC/index.html
+++ b/calculadoraIMC/index.html
@@ -16,7 +16,7 @@
             <div>
                 <label for="nome"><b>Nome</b></label>
                 <input type="text" id="nome">
-                </div>
+            </div>
             <div>
                 <label for="altura"><b>Altura</b></label>
                 <input type="text" id="altura" required>
@@ -26,13 +26,12 @@
                 <input type="text" id="peso" required>
             </div>
             <div>
-                <button type="submit" id="botao">Calcular</button>
+                <button type="button" id="botao">Calcular</button>
             </div>
 
             <div id="telapreta">
-                <p ></p>
+                <p></p>
             </div>
-
 
         </form>
     </div>
