--- a/projeto-ValueWare/educacao.html
+++ b/projeto-ValueWare/educacao.html
@@ -7,13 +7,13 @@
     <title>Educação</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
-        <a class="navbar-brand" href="../principal/index.html">
-            <img src="../imagensGeral/logo-removebg-preview.png" width="250" height="120"
+        <a class="navbar-brand" href="./index.html">
+            <img src="./logo-removebg-preview.png" width="250" height="120"
                 class="d-inline-block align-top" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
-                    <a class="nav-link " href="../principal/index.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link " href="./index.html">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../saude/saude.html">Saúde</a>
+                    <a class="nav-link" href="./saude.html">Saúde</a>
                 </li>
                 <li class="nav-item dropdown active" >
                     <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -43,7 +43,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../sobreNos/sobreNos.html">Sobre Nós</a>
+                    <a class="nav-link" href="./sobreNos.html">Sobre Nós</a>
                 </li>
             </ul>
         </div>
@@ -227,7 +227,7 @@
                         alunos, conquistando resultados incríveis e duradouros.</p>
                 </div>
             </div>
-            <img src="./imagens/manutenção.png" alt="Beneficios na educação" width="100%" class="img-fluid">
+            <img src="./manutenção.png" alt="Beneficios na educação" width="100%" class="img-fluid">
             <div class="container mt-5">
                 <h3 class=" display-4" id="retenção">O sucesso e a reputação da sua instituição dependem, em grande
                     parte, da
@@ -461,7 +461,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script src="../javaScript/index.js"></script>
+        <script src="./index.js"></script>
     </main>
 </body>
 
