--- a/projeto-ValueWare/sobreNos.html
+++ b/projeto-ValueWare/sobreNos.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    
 
 <head>
     <meta charset="UTF-8">
@@ -10,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top ">
-        <a class="navbar-brand" href="#">
-            <img src="../imagensGeral/logo-removebg-preview.png" width="250" height="120"
+        <a class="navbar-brand" href="./index.html">
+            <img src="./logo-removebg-preview.png" width="250" height="120"
                 class="d-inline-block align-top" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -25,59 +24,64 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+                <li class="nav-item ">
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../saude/saude.html">Saúde</a>
+                    <a class="nav-link" href="./saude.html">Saúde</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../educacao/educacao.html">Educação</a>
+                    <a class="nav-link" href="./educacao.html">Educação</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../sobreNos/sobreNos.html">Sobre Nós</a>
+                    <a class="nav-link active" href="./sobreNos.html">Sobre Nós</a>
                 </li>
             </ul>
         </div>
     </nav>
     <main style="padding-top: 5%;">
         <div class="container mt-5">
-
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card">
-                        <a href="../saude/saude.html">
-                            <img src="./imagens/saude.jpg" class="card-img-top" alt="Imagem de Saúde"></a>
-                        <div class="card-body">
-                            <h5 class="card-title">Saúde</h5>
-                            <p class="card-text">Informações sobre saúde e bem-estar.</p>
-                        </div>
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./nossosServiços.png" class="d-block w-100" alt="..."
+                            style="margin-bottom: 5%;">
                     </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card">
-                        <a href="../educacao/educacao.html"> <img src="./imagens/educacao.png" class="card-img-top"
-                                alt="Imagem de Educação"></a>
-                        <div class="card-body">
-                            <h5 class="card-title">Educação</h5>
-                            <p class="card-text">Recursos educacionais e informações relevantes.</p>
-                        </div>
+                    <div class="carousel-item">
+                        <img src="./PRINCIPIOS E VALORES (1).png" class="d-block w-100" alt="..."
+                            style="margin-bottom: 5%;">
                     </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card">
-                        <a href="../sobreNos/sobreNos.html"><img src="./imagens/Sobre nós.png" class="card-img-top"
-                                alt="Imagem de Sobre Nós"></a>
-                        <div class="card-body">
-                            <h5 class="card-title">Sobre Nós</h5>
-                            <p class="card-text">Conheça mais sobre nossa equipe e missão.</p>
-                        </div>
+                    <div class="carousel-item">
+                        <img src="./retenção de alunos.png" class="d-block w-100" alt="..."
+                            style="margin-bottom: 5%;">
                     </div>
                 </div>
             </div>
 
+            <div class="container">
+                <div>
+                    <h1 class="display-4">Value Ware: Sua Parceira Estratégica nos Setores de Educação e Saúde</h1>
+                    <p class="lead">
+
+                        Somos uma equipe de especialistas altamente qualificados e experientes, prontos para ajudar
+                        sua instituição a alcançar o sucesso desejado. Nossa abordagem baseia-se em compreender
+                        profundamente as necessidades específicas do seu negócio e desenvolver estratégias eficazes
+                        para superar desafios e impulsionar seu crescimento, com o desenvolvimento e melhoria de
+                        processos e produtos e a facilitação da transformação digital, com foco na geração de valor
+                        identificando oportunidades de otimização de processos, redução de desperdícios (Lean),
+                        expansão e novos mercados para entregas de valor
+                        No atual cenário altamente competitivo e em constante evolução, entendemos a importância
+                        de se destacar da concorrência. É por isso que oferecemos serviços personalizados de
+                        consultoria, projetados para atender às demandas exclusivas dos setores de educação e saúde.
+                        Nossos profissionais possuem um profundo conhecimento das melhores práticas e tendências
+                        emergentes nesses setores, permitindo que ofereçamos insights valiosos e soluções
+                        inovadoras.
+                        Com a Value Ware ao seu lado, você terá acesso a uma ampla gama de conhecimentos e
+                        expertise necessários para impulsionar o sucesso de seu negócio gerando valor para seus
+                        clientes, colaboradores e gestores.
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="float-right">
             <div class="btn-group">
@@ -104,7 +108,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="telefone">Telefone</label>
-                                <input type="text" class="form-control" id="telefone" name="telefone">
+                                <input type="text" class="form-control" pattern="[0-9]{10}" id="telefone" name="telefone">
                             </div>
                             <div class="form-group">
                                 <label for="email">E-mail*</label>
@@ -128,7 +132,6 @@
                 </div>
             </div>
         </div>
-
         <footer class="bg-dark text-white py-4">
             <div class="container-fluid">
                 <div class="row justify-content-center">
@@ -161,7 +164,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="telefone" class="form-label">Telefone</label>
-                                <input type="text" class="form-control" id="telefone" name="telefone" pattern="[0-9]{9}">
+                                <input type="text" class="form-control" id="telefone" name="telefone" pattern="[0-9]{10}">
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">E-mail *</label>
@@ -187,11 +190,10 @@
         </footer>
 
 
-
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script src="../javaScript/index.js"></script>
+        <script src="./index.js"></script>
     </main>
 </body>
 
