--- a/redeSocial/src/paginas/conectado.html
+++ b/redeSocial/src/paginas/conectado.html
@@ -29,6 +29,8 @@
 
                         <li class="nav-item"><a href="#" class="nav-link">Marketplace</a></li>
 
+                        <li class="nav-item"><a href="#" class="nav-link usuario">Usuário</a></li>
+
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,6 +58,8 @@
             <a class="text-body" href="https://mdbootstrap.com/">LucasBook.com</a>
         </div>
     </footer>
+    <script src="../../Jquery/jquery.js"></script>
+    <script src="../javascript/usuario_logado.js"></script>
     <script src="../assets/javascript/script_cadastro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
