--- a/megaDaVirada/index.html
+++ b/megaDaVirada/index.html
@@ -92,9 +92,9 @@
                         <td>58</td>
                         <td>59</td>
                         <td>60</td>
-                    </tr>
+                    </tr><button type="button" onclick="verificarAcertos()" class="botao">Adicionar Jogo</button>
                 </table>
-                <button type="button" onclick="verificarAcertos()" class="botao">Adicionar Jogo</button>
+                
             </form>
             <table id="tabelaResultados">
                 <button type="button" id = "voltar" class="botao">Voltar</button>
