--- a/redeSocial/src/paginas/alterarDados.html
+++ b/redeSocial/src/paginas/alterarDados.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="../assets/css/style_cadastro.css">
+    <title>Alterar dados</title>
+    <link rel="stylesheet" href="../assets/css/style_alterarDados.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
@@ -37,7 +37,7 @@
                                 Configurações
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a href="./alterarDados.html" class="dropdown-item">Atualizar Dados</a></li>
+                                <li><a href="#" class="dropdown-item">Atualizar Dados</a></li>
 
                                 <li><a href="#" class="dropdown-item">Excluir Dados</a></li>
 
@@ -50,7 +50,24 @@
         </nav>
     </header>
     <main class="conteudo d-flex justify-content-around ">
-
+        <form action="../php/alteracaodeDados.php" method="post">
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailInfo" autocomplete="off">
+              <div id="emailInfo" class="form-text">Nós nunca compartilhamos suas informações com ninguém.</div>
+            </div>
+            <div class="mb-3">
+              <label for="cep" class="form-label">Cep</label>
+              <input type="text" class="form-control" id="cep" name="cep" maxlength="11" autocomplete="off">
+            </div>
+            <div class="mb-3">
+              <label for="senha" class="form-label">Senha</label>
+              <input type="password" class="form-control" id="senha" name="senha" maxlength="14" autocomplete="off">
+              <div id="emailInfo" class="form-text">Digite sua senha para alterar os dados.</div>
+            </div>
+          
+            <button type="submit" class="btn btn-primary">Alterar</button>
+          </form>
     </main>
     <footer class="fixed-bottom">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
@@ -59,9 +76,8 @@
         </div>
     </footer>
     <script src="../../Jquery/jquery.js"></script>
-    <script src="../javascript/usuario_logado.js"></script>
-    <script src="../assets/javascript/script_cadastro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/javascript/alterarDados.js"></script>
 </body>
 
 </html>
